<resources>
    <string name="app_name">Vluver</string>
    <string name="title_activity_main">Vluver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="inicio">Principal</string>
    <string name="mi_negocio">Mi negocio</string>
    <string name="menu_home">Casa</string>
    <string name="menu_gallery">Galeria vluver</string>
    <string name="menu_slideshow">Showers</string>
    <string name="menu_tools">Herramientas</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Cerrar sesion</string>

    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Registrarme</string>
    <string name="action_sign_in_short">Iniciar sesion</string>
    <string name="facebook_app_id">728782637475050</string>
    <string name="fb_login_protocol_scheme">fb728782637475050</string>

    <string name="title_activity_full_screen">Post</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="describe_como_fue_tu_dia">Describe como fue tu dia...</string>

</resources>
